# wallets_rest_api

./: .env  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
init-db/: 01-create-types.sql  02-create-tables.sql
migrations/: env.py
migrations/versions/: d25f2a9c3561_add_tests.py
src/: config.py  database.py  dependencies.py  main.py  utils.py
src/api_v1/: __init__.py
src/api_v1/operations/: models.py  orm.py  schemas.py
src/api_v1/wallets/: models.py  orm.py  schemas.py  views.py
tests/: conftest.py  test_wallets.py
tests/load_test/: locustfile.py
